# soda

./: .gitignore  LICENSE  README.md  business-context.yaml  notes.md  pyproject.toml  soda-rules.yaml  spec.md  strategy-decision-graph.yaml  strategy-rules.yaml  strategy-selection.md  synthesis-config.yaml
api/: __init__.py  segment.py
cli/: main.py
data/real/mdi/: README.md  business-context.yaml  codebook.json  context.json  outcomes.json  respondents.jsonl  responses.jsonl
data/synthetic/e-com/: responses.jsonl
juno/core/: config.py  models.py  orchestrator.py  schema.py  segment_builder.py
juno/core/loaders/: responses_loader.py
juno/pipeline/: context.py  keys.py  step.py
juno/pipeline/steps/: assign_segments.py  characterize_segments.py  compute_factor_loadings.py  compute_opportunity_profiles.py  compute_pca_components.py  select_key_outcomes.py  standardize_importance.py  validate_preflight.py
soda/api/: __init__.py  classify.py  enrich.py  name.py  persona.py  report.py  strategy.py
soda/cli/: main.py
soda/core/: config.py  models.py  orchestrator.py  segment_builder.py  segment_classifier.py  strategy_models.py  zone_classifier.py
soda/core/encoders/: compact_encoder.py
soda/core/loaders/: base_loader.py  codebook_loader.py  outcomes_loader.py  (+2 more)
soda/pipeline/: opportunity.py  runner.py
soda/synthesis/: __init__.py  agent.py  config.py  conversation.py  events.py  factory.py  models.py  state.py  tools.py  workflow.py
synthesis/: agent.py  tools.py
tests/: test_orchestrator.py  test_responses_loader.py  test_segment_builder.py
(+23 files in other folders)
